examples/test/testpolicy1218.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1218
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key5: value47
      key10: value18
      key23: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value24
          key45: value13
      podSelector:
        matchLabels:
          key28: value41
